fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.course-category-bar {
+  scrollbar-width: none;
+}
